syntax = "proto3";
option csharp_namespace = "MessageProtocols.Core";
package messageprotocols.core;

//1
message EntityType {
  string name = 1;
}